<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TestSlaveFastDataA" Id="{a22bcd59-36a8-421c-8ca5-dbd82e7563e2}">
    <Declaration><![CDATA[TYPE TestSlaveFastDataA :
STRUCT
	fastData1 : INT;
	fastData2 : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>