<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TestSlaveFastDataB" Id="{7a66b676-0327-4807-9ac6-6aa9ced28b56}">
    <Declaration><![CDATA[TYPE TestSlaveFastDataB :
STRUCT
	fastData3 : INT;
	fastData4 : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>